# dotfiles

./: .gitignore  .nvimlog  .tmux.conf  .xmobarrc  .zprofile  .zshenv  .zshrc  Brewfile  Makefile  README.md  bootstrap.sh  dotfiles-tools.cabal  flake.nix  setup-cli
.config/alacritty/: alacritty.toml  dark.toml  light.toml
.config/nvim/: init.lua  lazy-lock.json
.config/tmux/: tmux.conf.local
.config/wofi/: config  style.css
.xmonad/: xmonad.hs
apps/: README.md  install.sh
bootstrap/: Main.hi  Main.hs
claude/: config.json
codex/: config.toml
home/config/: README.md
home/profile/: README.md  zsh_env.zsh  zsh_p10k.zsh  zsh_profile.zsh  zsh_rc.zsh  zsh_tmux_conf.zsh
managers/sway/: colors.conf  config
nix/: package-set.nix
nix/modules/: damnenv.nix  rang.nix
scripts/: validate-themes.sh
setup/: Main.hi  Main.hs
sway/: config  outputs
theme-cli/: Main.hi  Main.hs
themes/night-owl/: alacritty.toml  ghostty.conf  nvim-theme.lua  sway-colors.conf  tmux.conf  waybar-colors.css  wofi-colors.css  xmobarrc  xmonad-colors.hs
themes/pitch-black/: alacritty.toml  nvim-theme.lua
themes/quiet-light/: alacritty.toml  ghostty.conf  nvim-theme.lua  sway-colors.conf  tmux.conf  waybar-colors.css  wofi-colors.css  xmobarrc  xmonad-colors.hs
themes/rose-pine/: alacritty.toml  ghostty.conf  nvim-theme.lua  sway-colors.conf  tmux.conf  waybar-colors.css  (+3 more)
themes/rose-pine-light/: alacritty.toml  ghostty.conf  sway-colors.conf  tmux.conf  waybar-colors.css  wofi-colors.css  xmobarrc  xmonad-colors.hs
waybar/: colors.css  style-base.css  style.css
(+58 files in other folders)
