cabal-version:      2.4
name:               dotfiles-tools
version:            0.1.0.0
build-type:         Simple

common shared
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.14 && <5,
      directory,
      filepath,
      process,
      time

executable setup-cli
  import: shared
  main-is: Main.hs
  hs-source-dirs: setup
